--- a/example/lib/widgets/template/navbar.j2.html
+++ b/example/lib/widgets/template/navbar.j2.html
@@ -1,5 +1,6 @@
 <nav
-  class="sticky top-0 z-50 bg-primary-900 backdrop-blur border-b bg-primary-900"
+  id="navbar"
+  class="sticky top-0 z-50 bg-primary-900 backdrop-blur border-b transition-all duration-300"
 >
   <div class="mx-auto w-full">
     <div class="flex w-full items-center justify-between gap-4 py-2 px-[12px]">
